--- a/main.html
+++ b/main.html
@@ -37,6 +37,9 @@
         event.target.playVideo();
       }
 
+      function playVideo() {
+        player.playVideo();
+      }
       // 5. The API calls this function when the player's state changes.
       //    The function indicates that when playing a video (state=1),
       //    the player should play for six seconds and then stop.
@@ -57,6 +60,7 @@
     <script src="tile.js" defer></script>
 </head>
 <body>
+    <button onclick="javascript:console.log('hello');">CLICK ME</button>
     <div class="Game" id="Game">
         <game-tile></game-tile>
     </div>
