--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     <div class="Game" id="Game">
         <game-tile></game-tile>
     </div>
-    <div class="container">
+    <div class="container" style="display: none;">
 	    <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="PTZgxW_3LIQ">
     </div>
 </div>
