--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="Game" id="Game">
-        <game-tile></game-tile>
+        <game-tile column="2" first="true"></game-tile>
     </div>
     <div class="container" style="display: none;">
 	    <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="PTZgxW_3LIQ">
