--- a/main.html
+++ b/main.html
@@ -17,10 +17,11 @@
 <body>
     <div class="Game" id="Game">
         <game-tile column="2" first="true"></game-tile>
+        <!-- <game-tile id="truc" column="3"></game-tile> -->
     </div>
     <div class="container" style="display: none;">
-	    <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="PTZgxW_3LIQ">
+	    <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="PTZgxW_3LIQ"></div>
     </div>
-</div>
+
 </body>
 </html>
