--- a/main.html
+++ b/main.html
@@ -13,8 +13,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js" defer></script>
     <script src="main.js" defer></script>
     <script src="tile.js" defer></script>
+    <script src="vfx.js" defer></script>
 </head>
 <body>
+    <canvas id="canvas1"></canvas>
+    <canvas id="canvas2"></canvas>
+    <canvas id="canvas3"></canvas>
     <div class="Game" id="Game">
         <game-tile column="2" first="true"></game-tile>
         <!-- <game-tile id="truc" column="3"></game-tile> -->
@@ -22,6 +26,5 @@
     <div class="container" style="display: none;">
 	    <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="PTZgxW_3LIQ"></div>
     </div>
-
 </body>
 </html>
