--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
     <script src="variables.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js" defer></script>
     <script src="main.js" defer></script>
-    <script src="vfx.js" defer></script>
     <script src="tile.js" defer></script>
+    <script src="vfx.js" defer></script>
     
     
 </head>
@@ -28,5 +28,6 @@
     <div class="container" style="display: none;">
 	    <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="PTZgxW_3LIQ"></div>
     </div>
+    <h2 id="text">Yo</h2>
 </body>
 </html>
