--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
     <canvas id="canvas2"></canvas>
     <canvas id="canvas3"></canvas>
     <div class="Game" id="Game">
-        <game-tile column="2" first="true"></game-tile>
+        <game-tile column="2" first="true" id="'first"></game-tile>
         <!-- <game-tile id="truc" column="3"></game-tile> -->
     </div>
     <div class="container" style="display: none;">
