--- a/main.html
+++ b/main.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densitydpi=device-dp">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/plyr@3/dist/plyr.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+
     <title>MagicTiles</title>
     
     <script src="https://cdnjs.cloudflare.com/polyfill/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL"></script>
@@ -29,5 +33,16 @@
 	    <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="PTZgxW_3LIQ"></div>
     </div>
 
+    <div class="div-info">
+        <div class="div-info-avancement"></div>
+        <h2 id="text-Score" class="score titillium-web-bold">276</h2>
+        <div class="div-info-tile">
+            <div id="info1" class="div-info-pts titillium-web-bold" data-text="COOL" style="--color:rgb(50, 224, 230);">COOL</div>
+            <div id="info2" class="div-info-pts titillium-web-bold" data-text="GREAT" style="--color:rgb(56, 180, 230);">GREAT</div>
+            <div id="info3" class="div-info-pts titillium-web-bold" data-text="PERFECT" style="--color:linear-gradient(90deg,rgba(240, 120, 218, 1) 0%, rgba(252, 182, 116, 1) 100%);">PERFECT</div>
+            <h2 id="text-mult" class="text-mult titillium-web-bold"></h2>
+        </div>
+    </div>
+    
 </body>
 </html>
