--- a/main.html
+++ b/main.html
@@ -22,11 +22,14 @@
     
 </head>
 <body>
+    
     <canvas id="canvas1"></canvas>
     <canvas id="canvas2"></canvas>
     <canvas id="canvas3"></canvas>
+    <canvas id="canvas4"></canvas>
     <div class="Game" id="Game">
-        <game-tile column="2" first="true" id="'first"></game-tile>
+        <game-tile column="1" first="true" id="first"></game-tile>
+        <game-tile column="3" first="true" id="chose" style="visibility: hidden;"></game-tile>
         <!-- <game-tile id="truc" column="3"></game-tile> -->
     </div>
     <div class="container" style="display: none;">
