--- a/main.html
+++ b/main.html
@@ -45,8 +45,13 @@
             <div id="info3" class="div-info-pts titillium-web-bold" data-text="PERFECT" style="--color:linear-gradient(90deg,rgba(240, 120, 218, 1) 0%, rgba(252, 182, 116, 1) 100%);">PERFECT</div>
             <h2 id="text-mult" class="text-mult titillium-web-bold"></h2>
         </div>
+        <div id="SpeedUpDiv" class="SpeedUpDiv">
+            <h2 class="SpeedUpText titillium-web-bold" data-text="SPEED UP">SPEED UP</h2><h2 id="SpeedUpNumber" class="SpeedUpNumber titillium-web-bold" data-text="0">0</h2>
+        </div>
     </div>
     
+    
+
     <div id="waitingScreen" class="waitingScreen titillium-web-bold">Loading Music...</div>
 
     <div id="MusicInfoDiv" class="MusicInfoDiv">
