--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="div-info">
-        <div class="div-info-avancement"></div>
+        <div class="div-info-avancement"><h2 id="fps" style="background-color: red;color: white;"></h2></div>
         <h2 id="text-Score" class="score titillium-web-bold">0</h2>
         <div class="div-info-tile">
             <div id="info1" class="div-info-pts titillium-web-bold" data-text="COOL" style="--color:rgb(50, 224, 230);">COOL</div>
