--- a/Iframe/navigation.html
+++ b/Iframe/navigation.html
@@ -19,7 +19,7 @@
         
     </script>
 </head>
-<body>
+<body allowfullscreen>
     <nav style="width: 100%;height: 100%;display: flex;flex-direction: row;justify-content: center;align-items: center;">
         <a class="tab" href="../index.html" target="_top">
             <img src="../Data/Icons/icon-playlist.svg" class="tab-img">
