--- a/addmusic.html
+++ b/addmusic.html
@@ -14,7 +14,7 @@
     <script src="apimanager.js" defer></script>
     <script src="auth.js" defer></script>
 </head>
-<body>
+<body allowfullscreen>
     <div class="GradientBg page">
         <iframe src="Iframe/navigation.html?index=1" class="navigation"></iframe>
     </div>
