--- a/main.html
+++ b/main.html
@@ -70,10 +70,24 @@
                         <h2 class="author" id="author"></h2>
                     </div>
                 </div>
-                
-                <div>
 
-
+                <div style="display: flex;flex-direction: column;align-items: center;justify-content: center;gap: 20px;">
+                    <div style="display: flex;flex-direction: column;align-items: center;justify-content: center;gap: 5px;">
+                        <div style="display: flex;flex-direction: row;align-items: last baseline;justify-content: center;gap: 9px;margin-bottom:5px;">
+                            <h2 class="titillium-web-bold" style="color: white;font-size: 50px;font-weight: bold;margin: 0;line-height: 50px;" id="Score">2132</h2>
+                            <div style="display: flex;flex-direction: column;justify-content: center;align-items: end;">
+                                <h2 class="titillium-web-bold" style="color: white;font-size: 16px;font-weight: bold;margin: 0;line-height: 16px;" id="ScoreWR">WR 4325</h2>
+                                <h2 class="titillium-web-bold" style="color: white;font-size: 24px;font-weight: bold;margin: 0;line-height: 24px;" id="ScorePB">PB 4325</h2>
+                            </div>
+                        </div>
+                        <div class="separator"></div>
+                        <img class="stars" src="Data/Icons/Stars/icon-stars4.svg"></img>
+                    </div>
+                    
+                    <button class="pinkbtn" style="width: 195px;height: 37px;gap: 4px;">
+                        <h2 style="color: white;font-size: 16px;font-weight: bold;font-family: 'Roboto', sans-serif;margin: 0;">View Leaderboard</h2>
+                        <img style="width: 24px;height: auto;" src="Data/Icons/icon-arrow-next.svg">
+                    </button>
                 </div>
             </div>
             <div class="div-btnmusic">
