--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <script src="auth.js" defer></script>
 </head>
-<body>
+<body allowfullscreen>
     <div class="GradientBg page">
         <div class="musics" id="musics">
         </div>
