--- a/main.html
+++ b/main.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="div-btnmusic">
-                <a class="PlaylistBtn btn" id="PlaylistBtn" href="/index.html">
+                <a class="PlaylistBtn btn" id="PlaylistBtn" href="./index.html">
                     <img src="Data/Icons/icon-playlist.svg" style="position: absolute;pointer-events: none;width: 64px;height: 64px;">
                     <img src="Data/Texture/texture-btnplaylist.png" style="visibility: hidden;height: 24vw;width: 24vw;">
                 </a>
