--- a/main.html
+++ b/main.html
@@ -33,10 +33,11 @@
     <canvas id="canvas2"></canvas>
     <canvas id="canvas3"></canvas>
     <canvas id="canvas4"></canvas>
-    <div class="Game" id="Game">
+    <canvas id="canvastile"></canvas>
+    <!-- <div class="Game" id="Game">
         <game-tile column="2" first="true" id="first"></game-tile>
-        <!-- <game-tile id="truc" column="3"></game-tile> -->
-    </div>
+
+    </div> -->
     <div class="container" style="display: none;">
 	    <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="gEmNIXjfu2E"></div>
         <!-- PTZgxW_3LIQ -->
