--- a/main.html
+++ b/main.html
@@ -34,6 +34,7 @@
     <canvas id="canvas3"></canvas>
     <canvas id="canvas4"></canvas>
     <canvas id="canvastile"></canvas>
+    <div class="transparentdiv"></div>
     <!-- <div class="Game" id="Game">
         <game-tile column="2" first="true" id="first"></game-tile>
 
